# sense_stop

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  follow_the_wall.cpp  follow_the_wall_1.cpp  iter_1.cpp  mavros_offboard_velocity_body_node.cpp  package.xml  sense.py
devel/: .catkin  .rosinstall  setup.sh
devel/lib/obs_stop/: iter_1
devel/lib/pkgconfig/: obs_stop.pc  rplidar_ros.pc
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/share/obs_stop/cmake/: obs_stopConfig.cmake
devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
launch/: ekf_erle_localization.launch  run_erle.launch
src/: iter_1.cpp  main.cpp  main_sense.cpp  sense.py
src/obs_stop/: CMakeLists.txt  package.xml
src/obs_stop/src/: iter_1.cpp  mavros_offboard_velocity_body_node.cpp  sense.py
